<resources>
    <!--  TtsDemo activity  -->
    <string name="app_name">TtsDemo</string>
    <string name="radio_group">Select a language:</string>
    <string name="choose_directory">...</string>
    <string name="none">/storage/sdcard2</string>
    <string name="button_speak_out">Speak Out</string>
    <string name="button_save">Save</string>
    <string name="check_box_speak_while_write">Speak While Write</string>
    <string name="text_view_save_prompt">Select Directory to save wave</string>
    <string name="radio_group_content">Select Language</string>
    <string name="radio_english">English</string>
    <string name="radio_chinese">Chinese</string>
    <string name="text_view_language_selected">Selected：中文</string>
    <string name="text_view_speak">TEXT TO SPEAK</string>
    <string name="edit_text_speak_hint">TEXT TO SPEAK</string>
    <string name="button_select_file">Select File</string>

    <!--  tts  -->
    <string name="tv_set_pitch">Set Speech Pitch</string>
    <string name="tv_set_rate">Set Speech Rate</string>
    <string name="tv_set_encoding">Set File Encoding, Default UTF-8</string>
    <string name="et_speak_pitch_value">0.9</string>
    <string name="et_speak_rate_value">0.9</string>
    <string name="bt_save_setting">Save</string>
    <string name="menu_setting">Setting</string>
    <string name="encoding_prompt">Select Encoding</string>
    <string name="tv_set_length">Set the speak length every time, 100~10000</string>
    <integer name="et_speak_length_value">100</integer>
    <string name="tts_package">com.google.android.tts-3.8.16-210308161.apk</string>

    <!-- voice  -->
    <string name="voice_url">https://play.google.com/store/apps/details?id=com.google.android.voicesearch</string>
    <string name="dialog_title">Notes</string>
    <string name="cancel">Cancle</string>
    <string name="download">Download</string>
    <string name="dialog_content">Don\'t find Recgonize devices, download it?</string>

    <string name="title_activity_camera">ProfessionalCamera</string>
    <string name="dummy_button">Dummy Content</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Camera 2.0 -->
    <string name="title_activity_ocr">OcrActivity</string>
    <string name="picture">Picture</string>
    <string name="description_info">Info</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>

    <!-- OCR 相关 -->
    <string name="ocr_tv_select_picture">Select the picture to do OCR</string>
    <string name="ocr_et_select_picture">Slect Picture</string>
    <string name="ocr_btn_recognition">Recognition</string>
    <string name="ocr_tv_recognition_result">Show the result of OCR</string>
    <string name="ocr_init_fail_prompt">baseApi init Failed!</string>
    <string name="button_select_picture">...</string>
    <string name="set_image_processing">set enabled process image</string>
    <string name="checkbox_threshold">enable threshold</string>
    <string name="text_selected_picture">Selected picture:</string>
    <string name="text_processed_picture">Processed picture:</string>
</resources>
